# mldevops_exercise

./: Dockerfile  fashion_mnist.py  pyproject.toml
project/: fasion_minst.py  lab1.ipynb
